# os-ioevents

./: .travis_deploy.sh  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: continuous-integration-workflow.yaml
include/os-ioevents/: os-ioevents.h
lib/: CMakeLists.txt  internal.h  os-ioevents-unix.c  os-ioevents-windows.c  os-ioevents.c  threads.h
scripts/: appveyor-deploy.ps1  build-variant.bat  loadImage.st
tonel/BaselineOfOSIOEvents/: BaselineOfOSIOEvents.class.st  package.st
tonel/OSIOEvents-Bindings/: LibOSIOEvents.class.st  LibOSIOEventsContext.class.st  LibOSIOEventsEvent.class.st  LibOSIOEventsEventFSMonitor.class.st  LibOSIOEventsEventProcessFinished.class.st  LibOSIOEventsEventProcessPipe.class.st  LibOSIOEventsFSMonitor.class.st  LibOSIOEventsHandle.class.st  LibOSIOEventsPool.class.st  LibOSIOEventsProcess.class.st  OSIOEventsAbstractEventSubscription.class.st  OSIOEventsBufferedReadStream.class.st  OSIOEventsBufferedReadStreamTest.class.st  OSIOEventsBufferedWriteStream.class.st  OSIOEventsConditionTest.class.st  OSIOEventsConditionVariable.class.st  OSIOEventsDriver.class.st  OSIOEventsEvent.class.st  OSIOEventsEventDispatcher.class.st  OSIOEventsEventSubscription.class.st  OSIOEventsFuture.class.st  OSIOEventsLineFlushingWriteStream.class.st  OSIOEventsNullEventSubscription.class.st  OSIOEventsUTF8TextReadStream.class.st  OSIOEventsUTF8TextReadStreamTest.class.st  OSIOEventsUTF8TextWriteStream.class.st  OSIOFSMonitorWatchEvent.class.st  OSIOFSMonitorWatchHandle.class.st  OSIOFileEvent.class.st  OSIOFileEventAccess.class.st  OSIOFileEventAttrib.class.st  OSIOFileEventCloseNoWrite.class.st  OSIOFileEventCloseWrite.class.st  OSIOFileEventCreate.class.st  OSIOFileEventDelete.class.st  OSIOFileEventOpen.class.st  (+11 more)
